--- a/css/style.css
+++ b/css/style.css
@@ -75,12 +75,15 @@ ul {
   display: flex;
   width: 100%;
   margin: 0 auto;
+  border-bottom: 4px var(--highlight-color);
+  max-width: 1200px;
   }
 .header-left{
  display: flex;
  flex-direction: row;
  width: 50%;
  padding-left: 150px;
+ align-items: center;
 }
 .header-right{
   width: 50%;
@@ -117,6 +120,7 @@ ul {
 .contact-list {
   list-style: none;
 justify-content: flex-end;
+align-items: center;
 }
 .contact-nav-link {
   color: var(--subtitle-color);
@@ -126,30 +130,36 @@ justify-content: flex-end;
 .main-nav-link:active,
 .main-nav-link:focus {
   color: var(--highlight-color);
-  border-bottom: var(--highlight-color);
-}
+  }
 .contact-nav-link:hover,
 .contact-nav-link:active,
 .contact-nav-link:focus {
   color: var(--highlight-color);
-  border-bottom: var(--highlight-color);
+  border-bottom: 4px var(--highlight-color);
+}
+.header-email:hover, .header-phone:hover{
+  fill:var(--highlight-color);
 }
 
 /*Hero section*/
 
 .hero-box {
   margin: 0 auto;
-  background-color: var(--dark-background);
   height: 600px;
   padding-top: 200px;
   padding-bottom: 280px;
   background-image: url('../images/slider.png');
-  background-repeat: repeat;
-   width: 100%;
+  background-repeat: no-repeat;
   margin: 0 auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 1200px;
 }
 .hero-section {
   align-items: center;
+  justify-content: center;
+  display: flex;
 }
 .hero-section-title {
   text-align: center;
@@ -192,10 +202,12 @@ justify-content: flex-end;
   display: flex;
   flex-direction: column;
   margin: 0 auto;
+  
 }
 .about-section-box{
    width: 100%;
   margin: 0 auto;
+  max-width: 1200px;
 }
 .about-section li {
   margin: 0%;
@@ -205,7 +217,7 @@ justify-content: flex-end;
   list-style-type: none;
   justify-content: center;
   margin: 0;
-  gap: 60px;
+  gap: 30px;
  }
 
 .about-text {
@@ -219,12 +231,12 @@ justify-content: flex-end;
   width: 280px;
   gap: 100px;   
 }
-.about-items:first-child {
+.about-icon{
+  fill:var(--subtitle-color)
+
 }
-.text-boxes {
-  margin-left: 17px;
-}
-.text-boxes :first-child {
+.about-icon:hover {
+  fill: var(--highlight-color );
 }
 
 /*Our team section*/
@@ -267,40 +279,13 @@ background-color: #f5f4fa;
   justify-content: center;
   gap: 10px;
 }
-.antenna-icon {
-  width: 65px;
-  height: 70px;
-  background-color: var(--icon-backround);
-}
-.clock-icon {
-  width: 67px;
-  height: 70px;
-
-  background-color: var(--icon-backround);
-}
-.diagram-icon {
-  width: 70px;
-  height: 54px;
-
-  background-color: var(--icon-backround);
-}
-.astronaut-icon {
-  width: 70px;
-  height: 70px;
-  background-color: var(--icon-backround);
-}
-/*
-.antenna-icon.clock-icon.diagram-icon.astronaut-icon:hover,
-.antenna-icon.clock-icon.diagram-icon.astronaut-icon:active,
-.antenna-icon.clock-icon.diagram-icon.astronaut-icon:focus {
-  color: var(--highlight-color);
-}*/
 
 .background-icon {
   background-color: var(--icon-backround);
   justify-content: center;
   align-items: center;
   display: flex;
+  width: 280px;
   height: 120px;
   margin-top: 94px;
 }
@@ -310,19 +295,6 @@ background-color: #f5f4fa;
   fill: currentColor;
   display: block;
 }
-.smartphone-icon {
-  width: 10px;
-  height: 16px;
-  margin-right: 10px;
-  align-items: center;
-}
-.envelope-icon {
-  width: 16px;
-  height: 12px;
-  margin-right: 10px;
-  align-items: center;
-}
-
 .social-link:hover,
 .social-link:active,
 .social-link:focus {
@@ -339,7 +311,9 @@ background-color: #f5f4fa;
   background-color: var(--white-color);
   border-radius: 50%;
 }
-
+.our-team-box{
+  max-width: 1200px;
+}
 .our-team-title {
   font-weight: 700px;
   font-size: 36px;
@@ -380,6 +354,7 @@ background-color: #f5f4fa;
    width: 100%;
   margin: 0 auto;
   justify-content: center;
+  align-content: center;
 }
 .customer-list {
   display: flex;
@@ -402,6 +377,14 @@ background-color: #f5f4fa;
   border: 1px solid #afb1b8;
   border-radius: 4px;
   padding: 16px 32px;
+  display: flex;
+ 
+}
+.customer-icon{
+  fill:var(--icon-color);
+}
+.customer-icon:hover {
+  fill: var(--highlight-color );
 }
 
 /*footer section*/
@@ -413,6 +396,7 @@ background-color: #f5f4fa;
   align-items: center;
   width: 100%;
   margin: 0 auto;
+  max-width: 1200px;
 }
 .adress-link {
   color: var(--white-color);
@@ -474,10 +458,20 @@ flex-direction: row;
 gap: 70px;
 align-items: center;
 justify-content: center;
+
 }
 .product-section{
    width: 100%;
   margin: 0 auto;
+ display: flex; 
+ justify-content: center;
+}
+.product-container{
+  max-width: 1200px;
+  display: flex;
+  flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 .product-list-item {
   display: inline-block;
@@ -602,17 +596,18 @@ width: 11px;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
+ 
 }
 .form-icon {
   width: 18px;
   height: 18px;
   position: absolute;
-  top: 30px;
+  top: 25px;
   left: 13.5px;
-  color: var(--writing-color);
+  color: var(--subtitle-color);
 }
 .form-icon:hover {
-  fill: var(--brand-color);
+  fill: var(--highlight-color );
 }
 .contact-form label {
   flex: 1 0 100%;
@@ -629,22 +624,21 @@ width: 11px;
   background-color: var(--white-color);
   width: 448px;
   height: 40px;
-  border: 1px solid var(--paragraph-color);
-  margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
   padding-left: 40px;
 }
-.contact-form input:focus,
-.contact-form textarea:focus {
-  color: var(--brand-color);
+.contact-form input:focus,.contact-form textarea:focus{
+  color: var(--highlight-color);
   outline: none;
   background-color: var(--white-color);
-  border: 1px solid var(--brand-color);
+  border: 1px solid var(--highlight-color);
   box-shadow: 0 2 1 0 rgba(0, 0, 0, 0.2), 0 1 1 0 rgba(0, 0, 0, 0.14),
     0 1 3 0 rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
 .contact-form textarea:focus ::placeholder {
-  color: var(--brand-color);
+  color: var(--highlight-color);
 }
 
 .contact-form textarea {
@@ -652,12 +646,14 @@ width: 11px;
   height: 120px;
   resize: none;
   margin-top: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
 }
 .contact-form textarea::placeholder {
   padding: 12px 16px;
 }
 .form-link {
-  color: var(--brand-color);
+  color: var(--highlight-color);
   font-size: 14px;
   line-height: 1.71;
   padding: 0;
@@ -665,7 +661,6 @@ width: 11px;
 .form-agreement {
   font-size: 14px;
   line-height: 1.71;
-  color: var(--paragraph-color);
   position: relative;
 }
 .inner-modal .form-button {
@@ -680,11 +675,17 @@ width: 11px;
   line-height: 1.875;
   text-align: center;
   color: var(--white-color);
-  background-color: var(--brand-color);
-  border-color: var(--brand-color);
+  background-color: var(--highlight-color);
   border-radius: 4px;
-  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-style: none;
   position: relative;
+  top: 30px;  
+}
+.box-button{
+  width: 100%;
+  display: flex;
+  position: absolute;
 }
 .form-agreement svg {
   width: 11px;
@@ -701,12 +702,15 @@ width: 11px;
   margin-left: 40px;
   margin-right: 7px;
   margin-top: 25px;
-  border: 1px solid var(--paragraph-color);
+  border: 1px solid var(--subtitle-color);
 }
 .form-span:hover {
   color: var(--white-color);
-  background-color: var(--brand-color);
-  border: 1px solid var(--brand-color);
+  background-color: var(--highlight-color);
+  border: 1px solid var(--highlight-color);
+}
+.checkbox {
+  display: none;
 }
 .email-icon {
   fill: var(--white-color);
@@ -722,14 +726,13 @@ width: 11px;
   width: 280px;
   font-size: 16px;
   line-height: 1.25;
-  color: var(--paragraph-color);
-  background-color: var(--bg-color);
-  border: 1px solid rgba(255, 255, 255, 0.3);
-filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
-border-radius: 4px;
+  color: var(--subtitle-color);
+  background-color: var(--white-color);
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
-.form-button {
+.form-button-footer {
   width: 150px;
   height: 50px;
   font-size: 16px;
