--- a/css/style.css
+++ b/css/style.css
@@ -62,20 +62,11 @@ ul {
   list-style: none;
   margin-right: 50px;
 }
-.main-nav-link:focus{
-  border-bottom: 4px;
-  color: var(--highlight-color);
-}
-.header-icon {
-  justify-content: center;
-  display: flex;
-}
 .page-header {
   background-color: var(--white-color);
   display: flex;
   width: 100%;
   margin: 0 auto;
-  border-bottom: 4px var(--highlight-color);
   max-width: 1200px;
   }
 .header-left{
@@ -119,17 +110,20 @@ ul {
 }
 .contact-list {
   list-style: none;
-justify-content: flex-end;
-align-items: center;
+  justify-content: flex-end;
+  align-items: center;
 }
 .contact-nav-link {
   color: var(--subtitle-color);
   margin-right: 40px;
 }
+/*nu functioneaza border bottom pe hover*/
+
 .main-nav-link:hover,
 .main-nav-link:active,
 .main-nav-link:focus {
   color: var(--highlight-color);
+  border-bottom: 4px var(--highlight-color);
   }
 .contact-nav-link:hover,
 .contact-nav-link:active,
@@ -137,8 +131,18 @@ align-items: center;
   color: var(--highlight-color);
   border-bottom: 4px var(--highlight-color);
 }
-.header-email:hover, .header-phone:hover{
-  fill:var(--highlight-color);
+
+/*nu pot hune fill pe icon*/
+
+.header-email:focus-within .contact-icon{
+  fill: var(--highlight-color);
+}
+.header-phone:focus-within .contact-icon{
+  fill: var(--highlight-color);
+}
+.header-icon {
+  justify-content: center;
+  display: flex;
 }
 
 /*Hero section*/
@@ -193,7 +197,6 @@ align-items: center;
   margin: auto;
   border: none;
   cursor: pointer;
-}
 }
 
 /*About section*/
@@ -371,7 +374,11 @@ background-color: #f5f4fa;
 .customer-icon:focus {
   color: var(--highlight-color);
 }
-
+.customer-item:hover,
+.customer-item:active,
+.customer-item:focus{
+  border: 1px solid var(--highlight-color); 
+}
 .customer-item {
   border: solid;
   border: 1px solid #afb1b8;
@@ -460,84 +467,8 @@ align-items: center;
 justify-content: center;
 
 }
-.product-section{
-   width: 100%;
-  margin: 0 auto;
- display: flex; 
- justify-content: center;
-}
-.product-container{
-  max-width: 1200px;
-  display: flex;
-  flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.product-list-item {
-  display: inline-block;
-  background: var(--white-color);
-  border: 1px solid #eeeeee;
-  margin-bottom: 20px;
-  margin-right: 20px;
-  cursor: pointer;
-}
-.product-list-item:hover,
-.product-list-item:active,
-.product-list-item:focus {
-  background: #ffffff;
-  border: 1px solid #eeeeee;
-  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-    1px 4px 6px rgba(0, 0, 0, 0.16);
-}
-.product-button {
-  display: flex;
-  justify-content: center;
-  padding-top: 100px;
-  padding-bottom: 56px;
-}
-.product-title {
-  margin-left: 24px;
-}
-.product-description {
-  margin-left: 24px;
-}
-.page-button:hover,
-.page-button:active,
-.page-button:focus {
-  background-color: var(--highlight-color);
-  color: var(--white-color);
-  border: none;
-}
-.overlay{
-  background-color: rgba(33, 150, 243, 0.9);
-  position: absolute;
-  top: 0%;
-  left: 0%;
-  width: 100%;
-  height: 100%;
-  transform:translateY(-100%);
-  transition: transform 300ms ease-out;
-}
-.product-box:hover .overlay{ 
-  transform: translateY(0%);
-  transition: transform 300ms ease-in;
-}
-.overlay-text{
-  width: 350px;
-  color: var(--white-color);
-  padding: 63px 24px 91px 24px;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 1.55;
-  letter-spacing: 0.03em;
-  margin: 0%;
-}
-.product-box{
-  background-color: var(--white-color);
-  position: relative;
-  overflow: hidden;
-  }
 
+/*Modal*/
 
 .modal{
 position: fixed;
@@ -570,6 +501,9 @@ position: relative;
   position: absolute;
   top:8px;
   right: 8px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 .close-icon{
   height: 11px;
@@ -589,6 +523,10 @@ width: 11px;
   margin-left: 41px;
   margin-bottom: 12px;
 }
+.label-box{
+  display: flex;
+  flex-direction: column;}
+
 .contact-form {
   width: 448px;
   height: 342px;
@@ -606,9 +544,7 @@ width: 11px;
   left: 13.5px;
   color: var(--subtitle-color);
 }
-.form-icon:hover {
-  fill: var(--highlight-color );
-}
+
 .contact-form label {
   flex: 1 0 100%;
   font-size: 12px;
@@ -628,8 +564,7 @@ width: 11px;
   border-radius: 4px;
   padding-left: 40px;
 }
-.contact-form input:focus,.contact-form textarea:focus{
-  color: var(--highlight-color);
+.contact-form-input:focus-within,.contact-form textarea:focus-within{
   outline: none;
   background-color: var(--white-color);
   border: 1px solid var(--highlight-color);
@@ -637,10 +572,14 @@ width: 11px;
     0 1 3 0 rgba(0, 0, 0, 0.12);
   cursor: pointer;
 }
+/* Nu functioneaza focus pe svg*/
+
+.contact-form-input:focus-within .form-icon{
+  fill: var(--highlight-color);
+}
 .contact-form textarea:focus ::placeholder {
   color: var(--highlight-color);
 }
-
 .contact-form textarea {
   width: 448px;
   height: 120px;
@@ -681,36 +620,38 @@ width: 11px;
   border-style: none;
   position: relative;
   top: 30px;  
+  cursor: pointer;
 }
 .box-button{
   width: 100%;
   display: flex;
   position: absolute;
 }
-.form-agreement svg {
+.checkbox-vector {
   width: 11px;
   height: 8px;
   fill: var(--white-color);
-  position: absolute;
-  top: 2px;
-  right: 375px;
 }
-.form-span {
-  display: inline-block;
+.checkbox-replace {
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
   width: 16px;
-  height: 15px;
+  height: 16px;
   margin-left: 40px;
   margin-right: 7px;
   margin-top: 25px;
-  border: 1px solid var(--subtitle-color);
+  border: 2px solid #414141;
+  border-radius: 2px;
 }
-.form-span:hover {
-  color: var(--white-color);
+
+input[type="checkbox"]:checked+.checkbox-replace:hover {
   background-color: var(--highlight-color);
   border: 1px solid var(--highlight-color);
 }
-.checkbox {
-  display: none;
+
+input[type="checkbox"] {
+display: none;
 }
 .email-icon {
   fill: var(--white-color);
@@ -745,4 +686,95 @@ width: 11px;
   border-radius: 4px;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
   position: relative;
+  cursor: pointer;
 }
+
+/*Portfolio*/
+
+.product-section{
+  width: 100%;
+ margin: 0 auto;
+display: flex; 
+justify-content: center;
+}
+.product-list{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+justify-content: center;
+}
+
+/*nu inteleg cum fac sa functioneze flex basis*/
+
+.product-list > li{
+  flex-basis: calc(100%/3);
+  max-width: 350px;
+}
+.product-container{
+  max-width: 1200px;
+}
+.product-list-item {
+ display: inline-block;
+ background: var(--white-color);
+ border: 1px solid #eeeeee;
+ margin-bottom: 20px;
+ margin-right: 20px;
+ cursor: pointer;
+}
+.product-list-item:hover,
+.product-list-item:active,
+.product-list-item:focus {
+ background: #ffffff;
+ border: 1px solid #eeeeee;
+ box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
+   1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.product-button {
+ display: flex;
+ justify-content: center;
+ padding-top: 100px;
+ padding-bottom: 56px;
+ cursor: pointer;
+}
+.product-title {
+ margin-left: 24px;
+}
+.product-description {
+ margin-left: 24px;
+}
+.page-button:hover,
+.page-button:active,
+.page-button:focus {
+ background-color: var(--highlight-color);
+ color: var(--white-color);
+ border: none;
+}
+.overlay{
+ background-color: rgba(33, 150, 243, 0.9);
+ position: absolute;
+ top: 0%;
+ left: 0%;
+ width: 100%;
+ height: 100%;
+ transform:translateY(-100%);
+ transition: transform 300ms ease-out;
+}
+.product-box:hover .overlay{ 
+ transform: translateY(0%);
+ transition: transform 300ms ease-in;
+}
+.overlay-text{
+ width: 350px;
+ color: var(--white-color);
+ padding: 63px 24px 91px 24px;
+ font-weight: 400;
+ font-size: 18px;
+ line-height: 1.55;
+ letter-spacing: 0.03em;
+ margin: 0%;
+}
+.product-box{
+ background-color: var(--white-color);
+ position: relative;
+ overflow: hidden;
+ }
